--- a/app_service/pyproject.toml
+++ b/app_service/pyproject.toml
@@ -13,6 +13,11 @@ asyncpg = "^0.29.0"
 alembic = "^1.13.2"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.2.2"
+pytest-asyncio = "^0.23.8"
+pytest-mock = "^3.14.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
